samples/_failures_safe/1761185750_8b06c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7505749a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_7505749a.c:170:36: error: expected ‘;’ at end of input
  170 |         tokens[token_count] = token
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_7505749a.c:170:9: error: expected declaration or statement at end of input
  170 |         tokens[token_count] = token
      |         ^~~~~~
./samples/SAFE/__tmp_7505749a.c:170:9: error: expected declaration or statement at end of input
